--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,13 @@
   },
   "rules": {
     "@typescript-eslint/no-explicit-any": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "ignoreRestSiblings": true,
+        "varsIgnorePattern": "^_"
+      }
+    ]
   }
 }
